Navbar spacing fix

--- a/webapp/src/components/Navbar/Navbar.css
+++ b/webapp/src/components/Navbar/Navbar.css
@@ -66,7 +66,7 @@
     }
 
     .dcl.navbar .navbar-mobile-menu .ui.header {
-        margin-left: 60px !important;
+        margin-left: 80px !important;
     }
 
     .dcl.navbar .mobile-menu {
